fix: update spacing

--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -3,6 +3,7 @@ button {
   height: 48px;
   border-radius: 8px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-top: 3rem;
 }
 
 button a {
