--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -8,8 +8,7 @@ footer {
   margin: 0px 4rem;
 }
 
-.footer-container,
-.icons-container {
+.footer-container {
   display: flex;
   gap: 2.5rem;
 }
@@ -35,12 +34,19 @@ nav a:hover,
   font-weight: var(--font-bold);
 }
 
+.icons-container {
+  display: flex;
+  gap: 2rem;
+}
+
 img.icon:hover {
   filter: drop-shadow(0px 0px 5px var(--medium-green));
   transition: all 500ms;
 }
 
-footer p {
+.copyright {
   color: var(--grey);
   font-size: 0.75rem;
+  padding-left: 0px;
+  border-left: none;
 }
