--- a/src/components/HomeContent/home-content.css
+++ b/src/components/HomeContent/home-content.css
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  height: 500px;
   padding: var(--padding-size);
   display: flex;
   justify-content: space-between;
@@ -8,6 +9,8 @@
 .text-container,
 .image-container {
   max-width: 540px;
+  display: flex;
+  flex-direction: column;
 }
 
 .buttons-container {
