--- a/src/components/Paragraph/paragraph.css
+++ b/src/components/Paragraph/paragraph.css
@@ -2,5 +2,12 @@ p {
   color: var(--grey);
   font-weight: var(--font-regular);
   font-size: 1.5rem;
-  padding: 2rem 0px 3rem;
+  padding-left: 1rem;
+  border-left: 5px solid rgb(1, 135, 98);
+  margin-top: 2rem;
+}
+
+.description {
+  padding-left: 0px;
+  border-left: none;
 }
